# synopticon-api

./: .bunfig.toml  .dockerignore  .eslintrc.json  .gitignore  3D_POSE_ESTIMATION_STRATEGY.md  API_GUIDE.md  API_INTEGRATION_GUIDE.json  ARCHITECTURE_AND_ROADMAP.json  ARCHITECTURE_AND_ROADMAP.md  CHANGELOG.md  CODE_AUDIT_REPORT_2025_08_23.json  CODE_AUDIT_REPORT_2025_08_23.md  CODE_QUALITY_AND_DEBUGGING_GUIDE.json  COMPREHENSIVE_CODEBASE_AUDIT_2025.md  COMPREHENSIVE_CODE_AUDIT_2025_08_23.md  CONTRIBUTING.md  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT.md  DEVELOPMENT_GUARDRAILS.json  DOCKER_DEPLOYMENT.json  Dockerfile  FINAL_AUDIT_REPORT.json  FINAL_AUDIT_REPORT.md  FUTURE_FEATURES.json  LAZY_LOADING_AUDIT_REPORT.md  LICENSE  LIGHTWEIGHT_MIGRATION_SUCCESS.md  MEDIAPIPE_WEBRTC_ROADMAP.md  MULTIMODAL_API_ANALYSIS.md  MULTIMODAL_API_RECOMMENDATIONS.json  MULTIMODAL_IMPLEMENTATION_GUIDE.md  NEON_EYE_TRACKER_INTEGRATION_ANALYSIS.json  NETLIFY_CHECKLIST.md  PERFORMANCE_AUDIT_REPORT.json  PERFORMANCE_OPTIMIZATION_LOG.md  PIPELINE_ARCHITECTURE.md  PROJECT.json  PROJECT_CLEANUP_SUMMARY.md  README.md  REFACTORING_REPORT.md  (+30 more)
.github/workflows/: docker-build.yml
.netlify/: netlify.toml  state.json
archive/: BREAKING_CHANGES_v0.5.8.md  CODE_QUALITY_IMPROVEMENTS.md  MCP_IMPLEMENTATION_REPORT.md  MCP_ROADMAP.md
demos/: README.md  speech-audio-comprehensive-demo.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  COGNITIVE-ADVISORY-SYSTEM-IMPLEMENTATION.md  DEVELOPER_GUIDE.md  MCP_API_REFERENCE.md  MCP_DEVELOPMENT_GUIDE.md  MCP_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  ai-finetuning-project-descriptions.md  ai-finetuning-projects.md  enhanced-implementation-plan-with-guardrails.json  final-implementation-plan.json  simulator-integration-report.md  tobii-5-comprehensive-integration-plan.md  tobii-5-integration-plan.md  webrtc-signaling-architecture.md
examples/: advanced-cognitive-integration.js  basic-demo.html  blazeface-demo.html  cognitive-dashboard.html  eye-tracking-demo.js  mediapipe-demo.html  multimodal-coordination.js  option-b-complete-integration.ts  speech-analysis-demo.html
scripts/: add-mcp-tools.js  code-quality-check.js  compile-shaders.js  guardrail-validator.ts  optimize-build.js  pre-commit-hooks.ts  setup-mcp.js  simple-quality-check.js
src/: browser-speech-analysis.js  browser-speech-client.js  index.js  index.ts  server-analysis-endpoint.js
src/api/: server.js  (+2 more)
src/features/eye-tracking/devices/tobii5/bridge/: CMakeLists.txt  build.bat  tobii-bridge-server.cpp
tests/: enhanced-memory-pool.test.js  lazy-loading-simple.test.js  lazy-loading.test.js  performance-validation.test.js  phase1-integration.test.js  pipeline-coverage.test.js  pipeline-integration.test.js  security.test.js  speech-client-server.test.js  speech-integration.test.js  synchronization.test.js
(+1053 files in other folders)
